2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Don't build all of webkit when running build-jsc

        In case the whole webkit project was built, but we then subsequently
        want to build only JSC, we need to run make in the proper subdirectory.

        This also means the incremental target needs to be added to all
        makefiles.

        Reviewed by Simmon Hausmann.

        * Scripts/webkitdirs.pm:
        (buildQMakeProject):
        * qmake/mkspecs/features/default_post.prf:

2011-11-04  Simon Hausmann  <simon.hausmann@nokia.com>

        Fix run-javascriptcore-tests for Qt when it's executed by the bot.

        Reviewed by Tor Arne Vestbø.

        * Scripts/webkitdirs.pm:
        (jscProductDir): jsc path changed.

2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Error out early if trying to build against Qt < 4.8

        Reviewed by Simon Hausmann.

        * qmake/mkspecs/features/default_pre.prf:

2011-11-04  Simon Hausmann  <simon.hausmann@nokia.com>

        Fix run-launcher for Qt and Gtk.

        Rubber-stamped by Tor Arne Vestbø.

        * Scripts/webkitdirs.pm:
        (isWK2): Re-add isWK2(), as it's used in run-launcher.

2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Ignore '-2' if passed to build-webkit. WebKit2 is now built by default.

        Reviewed by Simon Hausmann.

        * Scripts/build-webkit:

2011-11-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Use web view title as window title in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=71544

        Reviewed by Philippe Normand.

        * MiniBrowser/gtk/BrowserWindow.c:
        (webViewURIChanged): Removed extra space.
        (webViewTitleChanged): Set window title using
        webkit_web_view_get_title().
        (browser_window_init): Set initial default window title.
        (browserWindowConstructed): Connect to WebView notify::title
        signal.
