@@ -1,5 +1,15 @@
 2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
 
+        [Qt] Disable STDIN check before cleaning build dir
+
+        It didn't work on the bots.
+
+        Reviewed by Ossy.
+
+        * Scripts/webkitdirs.pm:
+
+2011-11-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
+
         [Qt] Don't build all of webkit when running build-jsc
 
         In case the whole webkit project was built, but we then subsequently
